# nav-onboarding-2024

./: README.md
delivery-bot-infrastructure/: CMakeLists.txt  package.xml
delivery-bot-onboarding/: CMakeLists.txt  package.xml
order-publisher/: CMakeLists.txt  package.xml
order_publisher/: CMakeLists.txt  package.xml
order_publisher/config/: params.yaml
order_publisher/include/: order_publisher.h
order_publisher/msg/: Order.msg
order_publisher/src/: main.cpp  order_publisher.cpp
pizza_bot/: CMakeLists.txt  package.xml
pizza_bot/include/: pizza_bot_controller.h
pizza_bot/src/: main.cpp  pizza_bot_controller.cpp
pizza_bot_infrastructure/: CMakeLists.txt  package.xml
pizza_bot_infrastructure/config/: order_publisher_params.yaml  params.yaml  restaurant_params.yaml
pizza_bot_infrastructure/include/: customer.h  order_publisher.h  restaurant.h
pizza_bot_infrastructure/launch/: pizza_bot_infrastructure_launch.py
pizza_bot_infrastructure/src/: customer.cpp  navigator.cpp  order_publisher.cpp  restaurant.cpp
pizza_bot_interfaces/: CMakeLists.txt  package.xml
pizza_bot_interfaces/action/: MakePizza.action
pizza_bot_interfaces/srv/: DeliverPizza.srv  NavigateToCoord.srv
